--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,38 +7,39 @@
             integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css" class="stylesheet">
+    <script src="index.js"></script>
 </head>
 
 <div class="container mt-3">
     <% for (let curName of listName) { %>
-    <div class="row">
-        <div class="d-flex flex-fill  mb-3" id="list-names">
-            <div class="col-4"><%= curName.name %></div>
-            <div class="input-group mb-3">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">Dropdown
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Free, come on in!</a></li>
-                    <li><a class="dropdown-item" href="#">On call but can come in.</a></li>
-                    <li><a class="dropdown-item" href="#">Busy, you shall not pass!</a></li>
-                </ul>
-                <input type="text" class="form-control" aria-label="Text input with dropdown button"
-                       placeholder="Cute msg here... ♥">
+        <div class="row">
+            <div class="d-flex flex-fill mb-3" id="list-names">
+                <div class="col-3"><h2><%= curName.name %></h2></div>
+                <form action="/<%= curName._id %>?_method=PUT" method="POST">
+                    <div class="input-group mb-3">
+                        <select onchange="this.form.submit();" class="form-control d-flex flex-fill <%-  curName.status == 0 ? 'text-success' : curName.status == 1 ? 'text-warning': 'text-danger'%>"
+                                aria-label="Default select example" name="traffic[status]" id="<% curName._id %>_status">
+                            <option selected><%= msgDisplay[curName.status] %></option>
+                            <option class="text-success" value="0">Free, come on in!</option>
+                            <option class="text-warning" value="1">On call, but can come in.</option>
+                            <option class="text-danger" value="2">Busy, you shall not pass!</option>
+                        </select>
+
+                        <input type="text" class="form-control ms-3" aria-label="Text input with dropdown button" name="traffic[message]"
+                               value="<%= curName.message%>" placeholder="Leave a message here...">
+                    </div>
+                </form>
+                <form action="/<%= curName._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm btn-danger ms-3 me-3">Delete</button>
+                </form>
             </div>
         </div>
-        <hr>
-        <div class="d-flex flex-fill mb-3" id="list-names">
-            <form action="/<%= curName._id %>?_method=DELETE" method="POST">
-                <button class="btn btn-sm btn-danger">Delete</button>
-            </form>
-        </div>
-    </div>
     <% } %>
 
+    <hr>
     <form action="/" method="POST">
         <div class="mt-3">
-            <input type="text" id="txt-name-add" name="traffic[name]" class="text" placeholder="New kid's name">
+            <input type="text" id="txt-name-add" name="traffic[name]" class="text" placeholder="New kid's name" required>
             <button class="btn btn-primary ms-2" id="btn_add-new">Add Person</button>
         </div>
     </form>
