--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Traffic Signal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../index.css" class="stylesheet">
-</head>
-<body>
-<h2> Traffic Signal is a roommate traffic control system where you can set your own and see the status of your roommates. </h2>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+
+<link rel="stylesheet" href="stylesheets/home.css">
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="landing">
+            <a href="/new" class="btn">Get Traffic Light</a>
+            <h1> Traffic Signal is a roommate traffic control system. </h1>
+        </div>
+    </div>
+</div>
+
