--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,6 +10,7 @@
             crossorigin="anonymous"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <link rel="stylesheet" href="stylesheets/boilerplate.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <!--<body class="d-flex flex-column">-->
 <body>
@@ -17,9 +18,7 @@
     <main class="container-fluid">
         <div class="row">
             <%- include('../partials/flash') %>
-            <!--            <div class="body mb-6">-->
             <%- body %>
-            <!--            </div>-->
         </div>
         <div class="row mt-3">
             <%- include('../partials/footer') %>
