--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,19 @@
 <% layout('layouts/boilerplate') %>
 
+<script src="https://www.google.com/recaptcha/api.js?render=<%= API_KEY %>"></script>
 <link rel="stylesheet" href="stylesheets/home.css">
+
 
 <div class="container-fluid">
     <div class="row">
         <div class="landing">
-            <a href="/new" class="btn">Get Traffic Light</a>
+
+            <a href="/new" class="btn" id="btnGetLight">Get Traffic Light</a>
+
             <h1> Traffic Signal is a roommate traffic control system. </h1>
         </div>
     </div>
 </div>
+
+<script type="text/javascript" src="/javascript/home.js"></script>
 
