bug fixes + catpcha

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,5 +15,9 @@
     </div>
 </div>
 
+<script>
+    const API_KEY = '<%= API_KEY %>'
+</script>
+
 <script type="text/javascript" src="/javascript/home.js"></script>
 
