--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,9 +9,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Retrieve Link</a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="#">Retrieve Link</a>-->
+<!--                </li>-->
             </ul>
         </div>
     </div>
