--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,13 @@
 <footer class="text-center text-white fixed-bottom bg-dark mt-4">
-    <div class="p-3" id="footerText">Traffic Signal ©2021</div>
+    <div class="p-3 d-flex justify-content-between"" id="footerText">
+        <div id="trademark">
+            <p> Traffic Signal ©2021 </p></div>
+        <div id="googlecaptcha">
+            <p>
+                This site is protected by reCAPTCHA and the Google
+                <a href="https://policies.google.com/privacy"> Privacy Policy </a> and
+                <a href="https://policies.google.com/terms"> Terms of Service </a> apply.
+            </p>
+        </div>
+    </div>
 </footer>
