--- a/public/stylesheets/boilerplate.css
+++ b/public/stylesheets/boilerplate.css
@@ -8,6 +8,16 @@ body {
 #footerText {
     background-color: rgba(0, 0, 0, 0.2);
     text-align: right;
+    font-size: small;
+    display: flex;
 }
 
+#trademark {
+    display: flex;
+    align-items: flex-start;
+}
 
+#googlecaptcha {
+    display: flex;
+    align-items: end;
+}
