--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -28,8 +28,8 @@ h1 {
     font-size: 1.5rem;
     color: #cf8636;
     position: absolute;
-    bottom: 20%;
     display: flex;
+    bottom: 20%;
     align-items: center;
     justify-content: center;
     left: 50%;
@@ -68,4 +68,8 @@ h1 {
     text-transform: uppercase;
     width: 15rem;
     padding: 1.5rem;
+}
+
+.grecaptcha-badge {
+    visibility: hidden;
 }
