--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -8,7 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
             crossorigin="anonymous"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+<!--    <script src="https://www.google.com/recaptcha/api.js"></script>-->
+    <script src="https://www.google.com/recaptcha/api.js?render=<%= API_KEY %>"></script>
+
     <link rel="stylesheet" href="stylesheets/boilerplate.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
