modified:   app.js 	modified:   package-lock.json 	modified:   public/stylesheets/boilerplate.css 	modified:   public/stylesheets/home.css 	modified:   public/stylesheets/trafficInstance.css 	modified:   views/home.ejs 	modified:   views/layouts/boilerplate.ejs 	modified:   views/partials/footer.ejs 	modified:   views/partials/navbar.ejs 	modified:   views/trafficInstance.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,20 +3,38 @@
 <link rel="stylesheet" href="stylesheets/home.css">
 
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid landing">
+
+    <!-- <div class="row">
         <div class="landing">
 
             <a href="/new" class="btn" id="btnGetLight">Get Traffic Light</a>
 
             <h1> Traffic Signal is a roommate traffic control system. </h1>
         </div>
+    </div> -->
+
+    <div class="homepage row">
+        <div class="homepage-body col-lg-5">
+            <h1>Work from home without interruptions.</h1>
+            <div class="col-lg-6">
+                <a href="/new" class="btn" id="btnGetLight">Get Traffic Light</a>
+            </div>
+            <p class="home-p">Traffic Signal is a home traffic control system. Start a new traffic light to share
+                with your housemates.</p>
+        </div>
+        <div class="homepage-img col-lg">
+            <img width="100%"
+                src="https://images.unsplash.com/photo-1599525785308-d77c14067aa8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1789&q=80"
+                alt="">
+        </div>
     </div>
+
 </div>
+
 
 <script>
     const API_KEY = '<%= API_KEY %>'
 </script>
 
 <script type="text/javascript" src="/javascript/home.js"></script>
-
