--- a/public/stylesheets/boilerplate.css
+++ b/public/stylesheets/boilerplate.css
@@ -5,11 +5,11 @@ body {
     height: 100vh;
 }
 
-#footerText {
-    background-color: rgba(0, 0, 0, 0.2);
-    text-align: right;
-    font-size: small;
+.footerText {
+    /* background-color: rgba(0, 0, 0, 0.2); */
     display: flex;
+    /* text-align: right; */
+    font-size: 1rem;
 }
 
 #trademark {
