--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -10,10 +10,19 @@
 
 body {
     height: 100vh;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-family: Muli;
+    background-color:#e9eff2;      
+    /* margin-bottom: 110px; */
+}
+
+@media (max-width: 767px) {
+    body {
+            margin-bottom: 110px;
+    }
 }
 
 .container {
@@ -24,7 +33,7 @@ body {
     padding: 0;
 }
 
-h1 {
+/* h1 {
     font-size: 1.5rem;
     color: #cf8636;
     position: absolute;
@@ -34,40 +43,89 @@ h1 {
     justify-content: center;
     left: 50%;
     transform: translateX(-50%);
+} */
+
+h1 {
+    color: #001f2e;
+    display: flex;
+    font-weight: bold;
+}
+
+.homepage {
+    display: flex;
+    margin-top: 1rem;
+    align-items: center;
+}
+
+.homepage-body {
+    margin-left: 4rem;
+    margin-top: 5rem;
+    margin-bottom: 4rem;
+    margin-right: 4rem;
+    /* padding-right: 2rem; */
+}
+
+@media (max-width: 992px) {
+    .homepage-body {
+        padding-right: 8.7rem;
+    }
+}
+
+.home-p {
+    color: #5c5c5c;
+    font-size: 0.8rem;
+}
+
+.homepage-img {
+    max-width: 100%;
+    height: auto; 
+    width: auto; 
 }
 
 .landing {
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     overflow: hidden;
-    background-image: url('../images/photo-1494129935429-873eafa78178.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    /* background-image: url('../images/photo-1494129935429-873eafa78178.jpg');
+    background-repeat: no-repeat; */
+    /* background-size: cover; */
     margin: 0;
     padding: 0;
     justify-content: center;
     align-items: center;
+    overflow-wrap: break-word;
 }
 
 
 .btn {
-    position: absolute;
+    /* position: absolute; */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
-    left: 50%;
-    top: 40%;
-    transform: translateX(-50%);
-    text-decoration: none;
+    /* left: 50%;
+    top: 40%; */
+    /* transform: translateX(-50%);
+    text-decoration: none; */
     color: #fff;
-    border: rgba(255, 255, 255, .8) solid 0.2rem;
-    background-color: rgba(25, 25, 25, .7);
+    /* border: rgba(255, 255, 255, .8) solid 0.2rem; */
+    background-color: #005178;
     font-size: 1rem;
     font-weight: bold;
-    text-transform: uppercase;
-    width: 15rem;
-    padding: 1.5rem;
+    /* text-transform: uppercase; */
+    /* width: 12rem; */
+    padding: 0.75rem;
+    margin-top: 2.5rem;
+    margin-bottom: 1.5rem;
+}
+
+/* div a:hover {
+    color: #fff;
+    background-color: #62899c;
+  } */
+
+nav a:hover {
+    font-weight: bold;
 }
 
 .grecaptcha-badge {
