--- a/public/stylesheets/trafficInstance.css
+++ b/public/stylesheets/trafficInstance.css
@@ -10,15 +10,27 @@
 
 body {
     height: 100vh;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
+    /* overflow: hidden; */
     font-family: Muli;
+    background-color:#e9eff2;
+    /* margin-bottom: 50px; */
 }
+
+/* @media (max-width: 992px) {
+    body {
+            margin-bottom: 580px;
+    }
+} */
 
 #curRoommates
 {
     margin-top: 0px;
     padding: 10px;
+    margin-right: 25px;
+    margin-left: 25px;
 }
 
 #roommateCard {
@@ -27,12 +39,14 @@ body {
 }
 
 #newPerson {
-    background-color: #565656;
-    color: #f8f8f8;
+    /* background-color: #565656; */
+    color: #001f2e;
     padding: 5px;
+    font-weight: bold;
     align-content: center;
     text-align: center;
     justify-content: center;
+    margin-top: 30px;
 }
 
 #newRoommates {
@@ -40,5 +54,9 @@ body {
     align-content: center;
     text-align: center;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
+.text{
+    padding-left: 10px;
+}
