--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
-<footer class="text-center text-white fixed-bottom bg-dark mt-4">
-    <div class="p-3 d-flex justify-content-between"" id="footerText">
+<footer class="text-white fixed-bottom mt-4" style="background-color: #001f2e; font-size:10px;">
+    <div class="p-3 d-flex justify-content-between">
         <div id="trademark">
-            <p> Traffic Signal ©2021 </p></div>
+            <p> Traffic Signal ©2021 </p>
+        </div>
         <div id="googlecaptcha">
             <p>
                 This site is protected by reCAPTCHA and the Google
