--- a/public/stylesheets/trafficInstance.css
+++ b/public/stylesheets/trafficInstance.css
@@ -60,3 +60,9 @@ body {
 .text{
     padding-left: 10px;
 }
+/* 
+@media only screen and (max-width: 576px) {
+    .text-secondary {
+        font-size: 1rem;
+    }
+  } */
