--- a/public/stylesheets/boilerplate.css
+++ b/public/stylesheets/boilerplate.css
@@ -1,15 +1,23 @@
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     overflow: auto;
-    height: 100vh;
+    min-height: 100vh;
 }
 
-.footerText {
-    /* background-color: rgba(0, 0, 0, 0.2); */
-    display: flex;
-    /* text-align: right; */
-    font-size: 1rem;
+main {
+    padding-right: 0 !important;
+    margin-right: 0 !important;
+}
+
+.row {
+    margin-right: 0 !important;
+    padding-right: 0 !important;
+ }
+
+p {
+    color: white;
+    font-size: 10px;
 }
 
 #trademark {
@@ -17,11 +25,27 @@ body {
     align-items: flex-start;
 }
 
-#googlecaptcha {
+/* #googlecaptcha {
     display: flex;
     align-items: end;
+} */
+
+.righttext {
+    text-align: right;
+}
+
+@media (max-width: 768px) {
+    .righttext {
+        text-align: left;
+    }
 }
 
 .grecaptcha-badge {
     visibility: hidden;
+    display: none;
 }
+
+footer {
+    bottom: 0;
+    width: 100%;
+  }
