--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -11,11 +11,11 @@
 body {
     height: 100vh;
     max-width: 100vw;
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     /* overflow: hidden; */
     font-family: Muli;
-    background-color:#e9eff2;      
+    background-color:#fff;      
     /* margin-bottom: 110px; */
 }
 
@@ -29,8 +29,8 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 /* h1 {
@@ -51,6 +51,13 @@ h1 {
     font-weight: bold;
 }
 
+/* .nomargin {
+    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
+    margin-top: 0 !important;
+
+ } */
+
 .homepage {
     display: flex;
     margin-top: 1rem;
@@ -59,9 +66,10 @@ h1 {
 
 .homepage-body {
     margin-left: 4rem;
-    margin-top: 5rem;
-    margin-bottom: 4rem;
+    padding-top: 5rem;
+    /* margin-bottom: 5rem; */
     margin-right: 4rem;
+    /* padding-bottom: 4rem; */
     /* padding-right: 2rem; */
 }
 
@@ -73,41 +81,60 @@ h1 {
 
 @media only screen and (max-width: 992px) {
     .homepage-body {
-        margin-top: 3rem;
+        padding-top: 3rem;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    .homepage-body {
+        margin-bottom: 2rem;
     }
   }
 
 @media only screen and (max-width: 600px) {
     .homepage-body {
-        margin-top: 1rem;
+        padding-top: 1rem;
     }
   }
-  
-
-.home-p {
-    color: #5c5c5c;
-    font-size: 0.8rem;
-}
 
 .homepage-img {
-    max-width: 100%;
-    height: auto; 
-    width: auto; 
+    /* max-width: 100%; */
+    height: 100%; 
+    width: 100%; 
+    margin-bottom: 1rem;
+    /* object-fit:cover; */
 }
+
+@media only screen and (max-width: 768px) {
+    .homepage-img {
+        margin-bottom: -1rem;
+    }
+  }
 
 .landing {
     /* position: absolute; */
     width: 100%;
     /* height: 100%; */
     overflow: hidden;
-    /* background-image: url('../images/photo-1494129935429-873eafa78178.jpg');
-    background-repeat: no-repeat; */
-    /* background-size: cover; */
-    margin: 0;
-    padding: 0;
+    /* background-image: url('../images/photo-1511649475669-e288648b2339.png');
+    background-repeat: no-repeat;
+    background-size: 100vw; */
+    /* background-size: cover;  */
+    background-color: #e4e9ed;
+    margin: 0 !important;
+    padding: 0 !important;
     justify-content: center;
     align-items: center;
     overflow-wrap: break-word;
+}
+
+@media (min-width: 768px) {
+    .landing {
+        background-color: #fff;
+        background-image: url('../images/photo-1511649475669-e288648b2339.png');
+        background-repeat: no-repeat;
+        background-size: 100vw;
+    }
 }
 
 
@@ -141,6 +168,74 @@ nav a:hover {
     font-weight: bold;
 }
 
+@media (max-width: 768px) {
+    .whitebackground {
+        background-color: white;
+    }
+}
+
+
 .grecaptcha-badge {
     visibility: hidden;
+    display: none;
+}
+
+.screenshots {
+    /* background-color: white; */
+    padding-left: 4rem;
+    padding-right: 4rem;
+    /* padding-top: 10%; */
+    /* padding-bottom: 6rem; */
+}
+
+@media (min-width: 768px) {
+    .screenshots {
+        padding-top: 4em;
+        /* padding-bottom: 10rem; */
+    }
+}
+
+@media (min-width: 992px) {
+    .screenshots {
+        padding-top: 6em;
+    }
+}
+
+@media (min-width: 1100px) {
+    .screenshots {
+        padding-top: 10em;
+    }
+}
+
+@media (min-width: 1200px) {
+    .screenshots {
+        padding-top: 12em;
+    }
+}
+
+.homepage-about {
+    /* margin-left: 4rem; */
+    /* margin-bottom: 5rem; */
+    margin-right: 4rem;
+    /* padding-bottom: 4rem; */
+    /* padding-right: 2rem; */
+}
+
+@media (max-width: 768px) {
+    .homepage-about {
+        padding-top: 2rem;
+        padding-bottom: 3rem;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+}
+
+h3,h5 {
+    color: #5c5c5c;
+    /* padding-right: 4rem; */
+    /* font-size: 2vh; */
 }
