--- a/public/stylesheets/trafficInstance.css
+++ b/public/stylesheets/trafficInstance.css
@@ -11,11 +11,11 @@
 body {
     height: 100vh;
     max-width: 100vw;
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     /* overflow: hidden; */
     font-family: Muli;
-    background-color:#e9eff2;
+    background-color: #e4e9ed;
     /* margin-bottom: 50px; */
 }
 
@@ -25,12 +25,36 @@ body {
     }
 } */
 
+
+
 #curRoommates
 {
-    margin-top: 0px;
-    padding: 10px;
-    margin-right: 25px;
-    margin-left: 25px;
+    padding-left: 30px;
+    padding-right: 30px !important;
+    padding-top: 10px;
+    /* margin-right: 25px;
+    margin-left: 25px; */
+    margin-right: auto;
+    margin-left: auto;
+    min-height: 13vh;
+}
+
+@media (min-height: 835px) {
+    #curRoommates {
+        min-height: 17vh;
+    }
+}
+
+@media (min-height: 1024px) {
+    #curRoommates {
+        min-height: 30vh;
+    }
+}
+
+@media (min-height: 1366px) {
+    #curRoommates {
+        min-height: 42vh;
+    }
 }
 
 #roommateCard {
@@ -50,15 +74,16 @@ body {
 }
 
 #newRoommates {
-    padding-bottom: 50px;
+    padding-bottom: 3rem;
     align-content: center;
     text-align: center;
     justify-content: center;
-    margin-bottom: 50px;
+    /* margin-bottom: 10rem; */
 }
 
 .text{
     padding-left: 10px;
+    border-radius: 5px;
 }
 /* 
 @media only screen and (max-width: 576px) {
@@ -66,3 +91,100 @@ body {
         font-size: 1rem;
     }
   } */
+
+  /* .grecaptcha-badge {
+	visibility: collapse !important;  
+	display:none !important;
+} */
+
+.share {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+.share p {
+    font-size: 0.8rem;
+    color: #424242;
+}
+
+.closebutton {
+    background-color: transparent;
+    border-color: transparent;
+    padding: 0;
+}
+
+#sharelink {
+    color: #424242;
+    background-color: #fff;
+    font-size: 0.8rem;
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 7px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.5rem;
+    margin-bottom: 1.5rem;
+    width: 60%;
+    padding-left: 20px;
+}
+
+@media (max-width: 768px) {
+    #sharelink {
+        width: 70%;
+    }
+}
+
+@media (max-width: 576px) {
+    #sharelink {
+        font-size: 0.7rem;
+        padding-top: 8px;
+        padding-bottom: 6px;
+        width: 80%;
+    }
+}
+
+.button {
+    background-color: #e6e6e6;
+    color: #424242;
+    font-size: 0.8rem;
+    width: 100px;
+    border-radius: 25px;
+}
+
+.buttons {
+    background-color: #e6e6e6;
+    color: #424242;
+    font-size: 0.8rem;
+    width: 75px;
+    border-radius: 25px;
+}
+
+button a, a:hover {
+    color: #424242;
+    text-decoration: none;
+}
+
+/* @keyframes fadeout {
+    from {opacity: 1;}
+    to {opacity: 0;}
+  }
+
+#copied {
+    animation-name: fadeout;
+    animation-duration: 1s;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+} */
+
+/* @media (max-width: 992px) {
+    .newline {
+        word-break: keep-all;
+    }
+} */
+
+.nomargin {
+    padding-right: 0 !important;
+}
