--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,15 +20,15 @@
 </head>
 <!--<body class="d-flex flex-column">-->
 
-<body class="mobile-margin hidden-lg">
+<body>
     <%- include('../partials/navbar') %>
     <main class=" container-fluid">
         <div class="row">
             <%- include('../partials/flash') %>
             <%- body %>
         </div>
-        <%- include('../partials/footer') %>
     </main>
+    <%- include('../partials/footer') %>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
         crossorigin="anonymous"></script>
