--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,23 @@
-<footer class="text-white fixed-bottom mt-4" style="background-color: #001f2e; font-size:10px;">
-    <div class="p-3 d-flex justify-content-between">
+<footer style="background-color: #001f2e;">
+    <!-- <div class="p-3 d-flex justify-content-between">
         <div id="trademark">
             <p> Traffic Signal ©2021 </p>
         </div>
         <div id="googlecaptcha">
             <p>
+                This site is protected by reCAPTCHA and the Google
+                <a href="https://policies.google.com/privacy"> Privacy Policy </a> and
+                <a href="https://policies.google.com/terms"> Terms of Service </a> apply.
+            </p>
+        </div>
+    </div> -->
+
+    <div class="p-3 d-flex row">
+        <div class="col-md-2" id="trademark">
+            <p> Traffic Signal ©2021 </p>
+        </div>
+        <div class="col-md" id="googlecaptcha">
+            <p class="righttext">
                 This site is protected by reCAPTCHA and the Google
                 <a href="https://policies.google.com/privacy"> Privacy Policy </a> and
                 <a href="https://policies.google.com/terms"> Terms of Service </a> apply.
