--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,17 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e9eff2">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e4e9ed">
     <div class="container-fluid">
-        <a class="navbar-brand px-5 py-3" style="color: #001f2e" href="/">Traffic Signal</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand px-5 py-3 mt-2" style="color: #001f2e" href="/">Traffic Signal</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link active" style="color: #001f2e" aria-current="page" href="/">Home</a>
-                </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Retrieve Link</a>-->
-<!--                </li>-->
+                </li> -->
+                <!--                <li class="nav-item">-->
+                <!--                    <a class="nav-link" href="#">Retrieve Link</a>-->
+                <!--                </li>-->
             </ul>
         </div>
     </div>
